--- a/webapp/static/styles.css
+++ b/webapp/static/styles.css
@@ -6,5 +6,70 @@
 }
 
 html{
-    color-scheme: dark;
+    color-scheme: light;
+    background: #f5f5f5;
+}
+
+body{
+    background: #f5f5f5;
+}
+
+.title{
+    font-size: 2rem;
+    text-align: center;
+    padding: 1rem .5rem;
+}
+
+.message {
+    width: 100%;
+    height: 3rem;
+    margin: .5rem 0;
+    padding: .5rem;
+}
+
+.message__content{
+    width:70%;
+    margin: 0 auto;
+    padding: 1rem;
+}
+
+.message__content p{
+    font-size: 1rem;
+    font-weight: 600 !important;
+    opacity: .8;
+}
+
+.chat-window__input{
+    width: 100%;
+    height: 3rem;
+    margin: .5rem 0;
+    padding: .5rem;
+}
+
+.chat-window__input .prompt_form{
+    width:70%;
+    margin: 0 auto;
+    padding: 1rem;
+}
+
+.chat-window__input .prompt_form input{
+    width: 70%;
+    height: 2rem;
+    margin: .5rem 0;
+    padding: .5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.chat-window__input .prompt_form input[type="submit"]{
+    width: 25%;
+    height: 2rem;
+    margin: .5rem 0;
+    padding: .5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background: #117af2;
+    color: #fffdfd;
+    font-weight: 600;
+    cursor: pointer;
 }
