--- a/webapp/templates/webapp/register.html
+++ b/webapp/templates/webapp/register.html
@@ -49,7 +49,7 @@
             <input type="password" name="password" placeholder="Confirm your password" required>
         </div>
         <input type="submit" value="Register">
-        <p>Already have an account? <a href="signup.html">Log in</a></p>
+        <p>Already have an account? <a href="/login">Log in</a></p>
     </form>
 
 
