--- a/webapp/templates/webapp/register.html
+++ b/webapp/templates/webapp/register.html
@@ -45,8 +45,8 @@
             <input type="password" name="password" placeholder="Enter your password" required>
         </div>
         <div class="confirm-password-field">
-            <label for="password">Confirm Password</label>
-            <input type="password" name="password" placeholder="Confirm your password" required>
+            <label for="confirm-password">Confirm Password</label>
+            <input type="password" name="confirm-password" placeholder="Confirm your password" required>
         </div>
         <input type="submit" value="Register">
         <p>Already have an account? <a href="/">Log in</a></p>
