terms and condition checkbox added and set to required

--- a/webapp/templates/webapp/register.html
+++ b/webapp/templates/webapp/register.html
@@ -48,6 +48,10 @@
             <label for="confirm-password">Confirm Password</label>
             <input type="password" name="confirm-password" placeholder="Confirm your password" required>
         </div>
+        <div class="confirm-terms-and-condition">
+            <input type="checkbox" name="terms-and-condition" required>
+            <label for="terms-and-condition">I agree to the <a href="#">Terms and Conditions</a></label>
+        </div>
         <input type="submit" value="Register">
         <p>Already have an account? <a href="/">Log in</a></p>
     </form>
