--- a/webapp/templates/webapp/register.html
+++ b/webapp/templates/webapp/register.html
@@ -9,12 +9,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
-    rel="stylesheet"/ > {% load static %}
+    {% load static %}
     <link rel="stylesheet" href="{% static 'register.css' %}" />
+    <link rel="stylesheet" href="../../static/register.css" />
   </head>
   <body>
     
