--- a/webapp/templates/webapp/login.html
+++ b/webapp/templates/webapp/login.html
@@ -9,12 +9,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
-    rel="stylesheet"/ > {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
+     {% load static %}
     <link rel="stylesheet" href="{% static 'login.css' %}" />
+    <link rel="stylesheet" href="../../static/login.css" />
   </head>
   <body>
     
@@ -40,10 +38,9 @@
             <label for="password">Password</label>
             <input type="password" name="password" placeholder="Enter your password" required>
         </div>
-        <input type="submit" value="Login">
+        <input type="submit" value="Login" class="btn btn-primary">
         <p>Don't have an account? <a href="/register">Sign up</a></p>
     </form>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
