--- a/webapp/static/styles.css
+++ b/webapp/static/styles.css
@@ -1,75 +1,160 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Roboto+Mono&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
+    -webkir-font-smoothing: antialiased;
+    transition: all .3s ease;
 }
 
-html{
+html {
     color-scheme: light;
-    background: #f5f5f5;
+    background: #f1f1f1;
+    overflow-x: hidden;
 }
 
-body{
-    background: #f5f5f5;
+body {
+    background: #f1f1f1;
 }
 
-.title{
-    font-size: 2rem;
+.navbar {
+    background: #42b983 !important;
+}
+
+/* text styles and line styles */
+.title {
+    font-size: 1.5rem;
     text-align: center;
-    padding: 1rem .5rem;
+    color: #fffdfd;
+    font-weight: 500;
 }
+
+.small-text {
+    font-size: 80%;
+}
+.robotic {
+    font-family: 'Roboto Mono', monospace;
+}
+.uppercase {
+    text-transform: uppercase;
+}
+.disease-title{
+    font-size: 95%;
+    margin-left: 13%;
+    font-weight: 600 !important;
+    margin-top: .5rem;
+    opacity: .8;
+}
+hr{
+    opacity: .5;
+    width: 50%;
+    margin: 0 auto;
+}
+/* text styles ends here */
 
 .message {
     width: 100%;
     height: 3rem;
-    margin: .5rem 0;
     padding: .5rem;
 }
 
-.message__content{
-    width:70%;
+.message__content {
+    width: 70%;
     margin: 0 auto;
-    padding: 1rem;
 }
 
-.message__content p{
+.message__content p {
     font-size: 1rem;
-    font-weight: 600 !important;
+    font-weight: 300 !important;
     opacity: .8;
 }
 
-.chat-window__input{
+
+
+.chat-window__input {
     width: 100%;
     height: 3rem;
     margin: .5rem 0;
     padding: .5rem;
 }
+.chat-window__messages{
+    overflow-y: scroll !important;
+}
 
-.chat-window__input .prompt_form{
-    width:70%;
+.chat-window__input .prompt_form {
+    width: 70%;
     margin: 0 auto;
     padding: 1rem;
+    position: fixed;
+    bottom: 0;
+    left: 15%;
 }
 
-.chat-window__input .prompt_form input{
+.chat-window__input .prompt_form input {
     width: 70%;
-    height: 2rem;
+    height: 2.6rem;
     margin: .5rem 0;
     padding: .5rem;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
-.chat-window__input .prompt_form input[type="submit"]{
+.chat-window__input .prompt_form input[type="submit"] {
     width: 25%;
-    height: 2rem;
+    height: 2.6rem;
     margin: .5rem 0;
     padding: .5rem;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background: #117af2;
+    background: #42b983;
     color: #fffdfd;
-    font-weight: 600;
+    font-weight: 500;
     cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .message{
+        height: auto;
+    }
+    .message__content {
+        width: 93%;
+    }
+    .message__content p{
+        font-size: 80%;
+    }
+    .chat-window__input .prompt_form {
+        width: 90%;
+        left: 5%;
+    }
+    .chat-window__input .prompt_form input {
+        width: 80%;
+    }
+    .chat-window__input .prompt_form input[type="submit"] {
+        width: 18%;
+    }
+}
+@media screen and (max-width: 576px) {
+    .headline{
+        font-size: 50%;
+    }
+    .disease-title{
+        margin-left: 5%;
+    }
+    .message__content p{
+        font-size: 70%;
+    }
+    .chat-window__input .prompt_form {
+        width: 90%;
+        left: 5%;
+    }
+    .chat-window__input .prompt_form input {
+        width: 80%;
+    }
+    .chat-window__input .prompt_form input[type="submit"] {
+        width: 18%;
+    }
+    
 }
