Fix formatting in index.html

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -156,8 +156,8 @@
         <div class="message">
           <div class="message__content">
             <p>
-              <span class="robotic uppercase">Disease Precaution : </span> {{
-              disease_precaution }}
+              <span class="robotic uppercase">Disease Precaution : </span>
+               {{ disease_precaution }}
             </p>
           </div>
         </div>
