--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -27,6 +27,9 @@
             >Your personal healthcare companion</span
           >
         </h1>
+        <a href="{% url 'logout' %}">
+          <button class="log-out-btn">Log out</button>
+        </a>
       </div>
     </nav>
 
