--- a/webapp/static/styles.css
+++ b/webapp/static/styles.css
@@ -22,6 +22,10 @@ body {
 
 .navbar {
     background: #42b983 !important;
+    margin-bottom: 3%;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 /* text styles and line styles */
@@ -43,27 +47,33 @@ body {
 }
 .disease-title{
     font-size: 95%;
-    margin-left: 13%;
     font-weight: 600 !important;
-    margin-top: .5rem;
     opacity: .8;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 14.5%;
 }
 hr{
     opacity: .5;
     width: 50%;
     margin: 0 auto;
+    position: relative;
+    top: -15%;
+    right: -5%;
 }
 /* text styles ends here */
 
 .message {
     width: 100%;
-    height: 3rem;
-    padding: .5rem;
 }
 
 .message__content {
     width: 70%;
     margin: 0 auto;
+}
+
+.chat-window{
+    margin-top: 7%;
 }
 
 .message__content p {
@@ -72,17 +82,13 @@ hr{
     opacity: .8;
 }
 
-
-
 .chat-window__input {
     width: 100%;
     height: 3rem;
     margin: .5rem 0;
     padding: .5rem;
 }
-.chat-window__messages{
-    overflow-y: scroll !important;
-}
+
 
 .chat-window__input .prompt_form {
     width: 70%;
