--- a/webapp/templates/webapp/register.html
+++ b/webapp/templates/webapp/register.html
@@ -46,7 +46,7 @@
         </div>
         <div class="confirm-terms-and-condition">
             <input type="checkbox" name="terms-and-condition" required>
-            <label for="terms-and-condition">I agree to the <a href="#">Terms and Conditions</a></label>
+            <label for="terms-and-condition">I agree to the <a href="https://hiro-docs.vercel.app/#/">Terms and Conditions</a></label>
         </div>
         <input type="submit" value="Register">
         <p>Already have an account? <a href="/">Log in</a></p>
